@@ -5,23 +5,27 @@ import edu.colorado.phet.beerslawlab.beerslaw.model.Light;
 import edu.colorado.phet.beerslawlab.common.BLLResources.Images;
 import edu.colorado.phet.beerslawlab.common.BLLSimSharing.UserComponents;
 import edu.colorado.phet.beerslawlab.common.view.MomentaryButtonNode;
+import edu.colorado.phet.common.phetcommon.view.graphics.transforms.ModelViewTransform;
 import edu.colorado.phet.common.piccolophet.simsharing.NonInteractiveEventHandler;
 import edu.umd.cs.piccolo.PNode;
 import edu.umd.cs.piccolo.nodes.PImage;
 
 /**
- * Visual representation of the light in the Beer's Law tab
+ * Visual representation of the light in the Beer's Law tab.
+ * Origin is at the right center, where the light comes out of the housing.
  *
  * @author Chris Malley (cmalley@pixelzoom.com)
  */
 class LightNode extends PNode {
 
-    public LightNode( Light light ) {
+    public LightNode( Light light, ModelViewTransform mvt ) {
 
         // light housing
         PImage lightHousingNode = new PImage( Images.LIGHT );
         lightHousingNode.addInputEventListener( new NonInteractiveEventHandler( UserComponents.lightHousing ) );
         addChild( lightHousingNode );
+        lightHousingNode.setOffset( -lightHousingNode.getFullBoundsReference().getWidth(),
+                                    lightHousingNode.getFullBoundsReference().getHeight() / 2 );
 
         // button, scaled to fit image
         MomentaryButtonNode buttonNode = new MomentaryButtonNode( UserComponents.lightButton, light.on );
@@ -29,5 +33,7 @@ class LightNode extends PNode {
         buttonNode.scale( 0.75 * lightHousingNode.getFullBoundsReference().getHeight() / buttonNode.getFullBoundsReference().getHeight() );
         buttonNode.setOffset( lightHousingNode.getFullBoundsReference().getMaxX() - ( buttonNode.getFullBoundsReference().getWidth() / 2 ) - 40,
                               lightHousingNode.getFullBoundsReference().getCenterY() );
+
+        setOffset( mvt.modelToView( light.location.toPoint2D() ) );
     }
 }
